Resolved the double scroll bar issue.

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -411,7 +411,6 @@ a#refresh_link
   }
   #preview_content
   {
-    overflow-y: scroll;
     height: 100%;
   }
 }
